HTML and CSS completed

--- a/Index.html
+++ b/Index.html
@@ -35,14 +35,64 @@
               <span id="current-date">Monday 20:00</span>,
               <span id="description">moderate rain</span>
               <br />
-              Humidity: <span id="humidity">87%</span>, Wind:
-              <span id="wind">7.2 km/h</span>
+              Humidity: <span id="humidity"><strong>87%</strong> </span>, Wind:
+              <span id="wind"><strong>7.2 km/h</strong></span>
             </div>
           </div>
           <div class="actual">
             <div class="wheather-app-icon" id="current-icon">☀️</div>
             <div class="wheather-app-temp" id="current-temp">24</div>
             <div class="wheather-app-unit">°C</div>
+          </div>
+        </div>
+        <div class="wheather-app-forcast">
+          <div class="wheather-forcast-week">
+            <div class="wheather-forcast-day">Tue</div>
+            <div class="wheather-forcast-icon">⛅</div>
+            <div class="wheather-forcast-temps">
+              <div class="wheather-forcast-temp"><strong>15º</strong></div>
+              <div class="wheather-forcast-temp">9º</div>
+            </div>
+          </div>
+          <div class="wheather-forcast-week">
+            <div class="wheather-forcast-day">Wed</div>
+            <div class="wheather-forcast-icon">⛅</div>
+            <div class="wheather-forcast-temps">
+              <div class="wheather-forcast-temp"><strong>15º</strong></div>
+              <div class="wheather-forcast-temp">9º</div>
+            </div>
+          </div>
+          <div class="wheather-forcast-week">
+            <div class="wheather-forcast-day">Thu</div>
+            <div class="wheather-forcast-icon">⛅</div>
+            <div class="wheather-forcast-temps">
+              <div class="wheather-forcast-temp"><strong>15º</strong></div>
+              <div class="wheather-forcast-temp">9º</div>
+            </div>
+          </div>
+          <div class="wheather-forcast-week">
+            <div class="wheather-forcast-day">Fri</div>
+            <div class="wheather-forcast-icon">⛅</div>
+            <div class="wheather-forcast-temps">
+              <div class="wheather-forcast-temp"><strong>15º</strong></div>
+              <div class="wheather-forcast-temp">9º</div>
+            </div>
+          </div>
+          <div class="wheather-forcast-week">
+            <div class="wheather-forcast-day">Sat</div>
+            <div class="wheather-forcast-icon">⛅</div>
+            <div class="wheather-forcast-temps">
+              <div class="wheather-forcast-temp"><strong>15º</strong></div>
+              <div class="wheather-forcast-temp">9º</div>
+            </div>
+          </div>
+          <div class="wheather-forcast-week">
+            <div class="wheather-forcast-day">Sun</div>
+            <div class="wheather-forcast-icon">⛅</div>
+            <div class="wheather-forcast-temps">
+              <div class="wheather-forcast-temp"><strong>15º</strong></div>
+              <div class="wheather-forcast-temp">9º</div>
+            </div>
           </div>
         </div>
       </main>
