Added forecast HTML from JavaScript
I also corrected the word "forecast" as I had written it wrong every time

--- a/Index.html
+++ b/Index.html
@@ -45,56 +45,7 @@
             <div class="wheather-app-unit">°C</div>
           </div>
         </div>
-        <div class="wheather-app-forcast">
-          <div class="wheather-forcast-week">
-            <div class="wheather-forcast-day">Tue</div>
-            <div class="wheather-forcast-icon">⛅</div>
-            <div class="wheather-forcast-temps">
-              <div class="wheather-forcast-temp"><strong>15º</strong></div>
-              <div class="wheather-forcast-temp">9º</div>
-            </div>
-          </div>
-          <div class="wheather-forcast-week">
-            <div class="wheather-forcast-day">Wed</div>
-            <div class="wheather-forcast-icon">⛅</div>
-            <div class="wheather-forcast-temps">
-              <div class="wheather-forcast-temp"><strong>15º</strong></div>
-              <div class="wheather-forcast-temp">9º</div>
-            </div>
-          </div>
-          <div class="wheather-forcast-week">
-            <div class="wheather-forcast-day">Thu</div>
-            <div class="wheather-forcast-icon">⛅</div>
-            <div class="wheather-forcast-temps">
-              <div class="wheather-forcast-temp"><strong>15º</strong></div>
-              <div class="wheather-forcast-temp">9º</div>
-            </div>
-          </div>
-          <div class="wheather-forcast-week">
-            <div class="wheather-forcast-day">Fri</div>
-            <div class="wheather-forcast-icon">⛅</div>
-            <div class="wheather-forcast-temps">
-              <div class="wheather-forcast-temp"><strong>15º</strong></div>
-              <div class="wheather-forcast-temp">9º</div>
-            </div>
-          </div>
-          <div class="wheather-forcast-week">
-            <div class="wheather-forcast-day">Sat</div>
-            <div class="wheather-forcast-icon">⛅</div>
-            <div class="wheather-forcast-temps">
-              <div class="wheather-forcast-temp"><strong>15º</strong></div>
-              <div class="wheather-forcast-temp">9º</div>
-            </div>
-          </div>
-          <div class="wheather-forcast-week">
-            <div class="wheather-forcast-day">Sun</div>
-            <div class="wheather-forcast-icon">⛅</div>
-            <div class="wheather-forcast-temps">
-              <div class="wheather-forcast-temp"><strong>15º</strong></div>
-              <div class="wheather-forcast-temp">9º</div>
-            </div>
-          </div>
-        </div>
+        <div class="wheather-app-forecast" id="fore-cast"></div>
       </main>
       <footer>
         Created by
