--- a/Index.html
+++ b/Index.html
@@ -30,13 +30,13 @@
       <main>
         <div class="wheather-app-main-data">
           <div class="wheather-app-main">
-            <h1 class="wheather-app-city" id="current-city">Paris</h1>
+            <h1 class="wheather-app-city" id="current-city"></h1>
             <div class="wheather-app-details" id="p-texto">
-              <span id="current-date">Monday 20:00</span>,
-              <span id="description">moderate rain</span>
+              <span id="current-date"></span>,
+              <span id="description"></span>
               <br />
-              Humidity: <span id="humidity"><strong>87%</strong> </span>, Wind:
-              <span id="wind"><strong>7.2 km/h</strong></span>
+              Humidity: <strong id="humidity"></strong>, Wind:
+              <strong id="wind"></strong>
             </div>
           </div>
           <div class="actual">
