Final Project - links updated

--- a/Index.html
+++ b/Index.html
@@ -53,12 +53,14 @@
           >Carmen Silva</a
         >, code hosted on
         <a
-          href="https://github.com/Welcome-to-Carmen-Github/Week7_homework"
+          href="https://github.com/Welcome-to-Carmen-Github/Final_Project"
           target="_blank"
           >Github</a
         >
         and site hosted on
-        <a href="https://carmen-week7-weatherapp.netlify.app" target="_blank"
+        <a
+          href="https://carmenshecodeplusfinalproject.netlify.app"
+          target="_blank"
           >Netlify</a
         >
       </footer>
